--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ steel_defect.h5 filter=lfs diff=lfs merge=lfs -text
 'h5' filter=lfs diff=lfs merge=lfs -text
 '*h5' filter=lfs diff=lfs merge=lfs -text
 '*.h5' filter=lfs diff=lfs merge=lfs -text
+'steel_defect.h5' filter=lfs diff=lfs merge=lfs -text
